--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,31 @@ Section: python
 Priority: optional
 Maintainer: Dan Pascu <dan@ag-projects.com>
 Uploaders: Saul Ibarra <saul@ag-projects.com>
-Build-Depends: debhelper (>= 7.3.5), dh-python, python (>= 2.7)
+Build-Depends: debhelper (>= 7.4.3), dh-python, python-all-dev, python (>= 2.6), python-six, python3-all-dev, python3 (>= 3.4)
 Standards-Version: 3.9.6
 
 Package: python-gnutls
 Architecture: all
-Depends: ${python:Depends}, ${misc:Depends}, libgnutls-deb0-28 (>= 3.2) | libgnutls30
+Depends: ${python:Depends}, ${misc:Depends}, libgnutls-deb0-28 (>= 3.2) | libgnutls28 (>= 3.2) | libgnutls30, python-six
+Recommends: python-twisted-core
+Provides: ${python:Provides}
+Description: Python wrapper for the GnuTLS library
+ This package provides a high level object oriented wrapper around
+ libgnutls, as well as low level bindings to the GnuTLS types and
+ functions via ctypes. The high level wrapper hides the details of
+ accessing the GnuTLS library via ctypes behind a set of classes
+ that encapsulate GnuTLS sessions, certificates and credentials and
+ expose them to Python applications using a simple API.
+ .
+ The package also includes a Twisted interface that has seamless
+ intergration with Twisted, providing connectTLS and listenTLS
+ methods on the Twisted reactor once imported (the methods are
+ automatically attached to the reactor by simply importing the
+ GnuTLS Twisted interface module).
+
+Package: python3-gnutls
+Architecture: all
+Depends: ${python:Depends}, ${misc:Depends}, libgnutls-deb0-28 (>= 3.2) | libgnutls28 (>= 3.2) | libgnutls30
 Recommends: python-twisted-core
 Provides: ${python:Provides}
 Description: Python wrapper for the GnuTLS library
